# greeter

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  greeterConfig.cmake.in  vcpkg.json
.zed/: tasks.json
cmake/: greeterConfig.cmake
greeter/: CMakeLists.txt
greeter/include/greeter/: SayHello.hpp
greeter/source/: SayHello.cpp
